<?xml version="1.0"?>
<package format="2">
  <name>parameters_example</name>
  <version>0.0.0</version>
  <description>The parameters_example package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wikusjvr@todo.todo">wikusjvr</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


     <build_depend>roscpp</build_depend> 
     <exec_depend>roscpp</exec_depend> 
     
     <build_depend>std_srvs</build_depend> 
     <exec_depend>std_srvs</exec_depend> 
  
      <buildtool_depend>catkin</buildtool_depend>


</package>
