<?xml version="1.0"?>
<package format="2">
  <name>wheel_robot</name>
  <version>0.0.0</version>
  <description>The wheel_robot package</description>

  <maintainer email="wikus.jvr6@gmail.com">wikusjvr</maintainer>

  <license>MIT</license>

    <!-- Our node is written in C++. -->
    <build_depend>roscpp</build_depend> 
    <exec_depend>roscpp</exec_depend> 
    
    <!-- We want to use the message type sensor_msgs::JointState-->
    <build_depend>sensor_msgs</build_depend>
    <exec_depend>sensor_msgs</exec_depend> 
    
    <!-- We broadcast transform frames. -->
    <build_depend>tf2_ros</build_depend>
    <exec_depend>tf2_ros</exec_depend> 
    
    <!-- We want to use the message type geometry_msgs::TransformStamped-->	
    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend> 

    <!-- This is needed so that we can use the slider to change the joint states
	 (move the joints) when launching the robot in rviz.
     -->	
    <exec_depend>joint_state_publisher_gui</exec_depend> 
  
    <!-- Our build tool is catkin. -->
    <buildtool_depend>catkin</buildtool_depend>

</package>
